manifests/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-api
  labels:
    app: app-api
spec:
  selector:
    matchLabels:
      app: app-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-api
    spec:
      containers:
        - image: wordpress
          name: app-api
          ports:
            - containerPort: 80
              name: app-api
          volumeMounts:
            - name: app-persistent-storage
              mountPath: /var/www/html
          livenessProbe:
            initialDelaySeconds: 300
            periodSeconds: 30
            httpGet:
              port: 80
              path: /wp-admin/install.php # at the very beginning, this is the only accessible page. Don't forget to change to /wp-login.php
          readinessProbe:
            httpGet:
              port: 80
              path: /wp-admin/install.php
          resources:
            requests:
              cpu: 1000m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: app-persistent-storage
          persistentVolumeClaim:
            claimName: app-api
