manifests/web/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: api
---
#apiVersion: cloud.google.com/v1
#kind: BackendConfig
#metadata:
#  name: admin
#  namespace: app # namespace of the service
#spec:
#  iap:
#    enabled: true
#    oauthclientCredentials:
#      secretName: my-secret
#---
apiVersion: v1
kind: Service
metadata:
  name: admin
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
#    beta.cloud.google.com/backend-config: '{"default": "admin"}'
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 8080
  selector:
    app: admin
