manifests/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-api
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: app-api
