manifests/web/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "app"
    kubernetes.io/ingress.class: "gce"
  name: api
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 80
          - path: /admin
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin
                port:
                  number: 3000
