manifests/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "app"
    kubernetes.io/ingress.class: "gce"
  name: app
spec:
  defaultBackend:
    service:
      name: app
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: app
                port:
                  number: 80
